--- a/src/index.html
+++ b/src/index.html
@@ -268,11 +268,15 @@
                 selectedMarker.setAnimation(null);
             }
         }
+
+        function mapErrorHandler() {
+            window.alert('Load Google Map APIs Failed');
+        }
     </script>
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/knockout-3.4.2.js"></script>
     <script src="js/app.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyAZlXIOkb0ZPuebux9ysvrspF7DXwPozi0&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyAZlXIOkb0ZPuebux9ysvrspF7DXwPozi0&callback=initMap" onerror="mapErrorHandler()"></script>
 </body>
 
 </html>
